<resources>
    <string name="app_name">JaEstic</string>

    //main menu (activity_main)
    <string name="appPhrase">Welcome to JaEstic, feel free to order, Fot-li!</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_up_btn">Sign Up</string>

    //login menu (login.xml)
    <string name="loginMenu">LOGIN</string>
    <string name="loginDescirption">Continue with email</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="forgotYourPassword">Forgot your password?</string>
    <string name="LoginBtnText">Login</string>
    <string name="notRegisterText">Not register yet?</string>
    <string name="registerLink">Register</string>
    <string name="txtOr">or</string>
    <string name="GoogleBtnText">Continue with Google</string>
</resources>